--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,12 @@
 
     <string name="app_name">SMS-Cleaner</string>
     <string name="menu_delete">Delete found</string>
+    <string name="searching_title">Searching</string>
+    <string name="searching_message">Loading unnecessary sms...</string>
+    <string name="deleting_title">Delete</string>
+    <string name="deleting_message">Removing unnecessary sms...</string>
+    <string name="found">Found</string>
+    <string name="deleted">Deleted</string>
+    <string name="received">Received</string>
 
 </resources>
