added database and possibility to add regexpressions

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SMS-Cleaner</string>
+    <string name="app_name">SMS Cleaner</string>
     <string name="menu_delete">Удалить найденное</string>
     <string name="searching_title">Поиск</string>
     <string name="searching_message">Собираем ненужные смс...</string>
@@ -10,5 +10,8 @@
     <string name="deleted">Удалено</string>
     <string name="found">Найдено</string>
     <string name="received">Получено</string>
+    <string name="menu_settings">Настройки</string>
+    <string name="title_activity_settings">Настройки</string>
+    <string name="add">Добавить</string>
 
 </resources>
