--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,11 @@
     <string name="title_activity_settings">Settings</string>
     <string name="menu_settings">Settings</string>
     <string name="add">Add</string>
+    <string name="add_title">Add your own template</string>
+    <string name="all_templates_title">All templates</string>
+    <string name="regexpr_added">Template added</string>
+    <string name="regexpr_deleted">Template deleted</string>
+    <string name="templates_list_hint_text">(Long tap on item to delete)</string>
+    <string name="menu_refresh">Refresh</string>
 
 </resources>
