--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="start_message">Press Ok because kitkat or above</string>
     <string name="app_name">SMS Cleaner</string>
     <string name="menu_delete">Delete found</string>
     <string name="searching_title">Searching</string>
